--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "blog-website",
+  "homepage":"https://nitin0557.github.io/blogsite",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,6 +14,7 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "bootstrap": "^5.3.5",
+    "gh-pages": "^6.3.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.1.0",
@@ -26,7 +28,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build", 
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
